--- a/TeamTest/TeamTest.csproj
+++ b/TeamTest/TeamTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="OI2016\REP.cs" />
     <Compile Include="RNG.cs" />
     <Compile Include="SKI\STE.cs" />
+	<Compile Include="OI2017\PIO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
