--- a/TeamTest/TeamTest.csproj
+++ b/TeamTest/TeamTest.csproj
@@ -51,20 +51,24 @@
     <Compile Include="ITest.cs" />
     <Compile Include="OI2016\POD.cs" />
     <Compile Include="OI2017\PIO.cs" />
+    <Compile Include="OI2018\NIE.cs" />
+    <Compile Include="OI2018\ROB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OI2016\REP.cs" />
     <Compile Include="RNG.cs" />
-    <Compile Include="SKI\SKI.cs" />
-    <Compile Include="SKI\STE.cs" />
-    <Compile Include="SKI\WIC.cs" />
-    <Compile Include="SKI\KOL.cs" />
+    <Compile Include="SKI2017\SKI.cs" />
+    <Compile Include="SKI2017\STE.cs" />
+    <Compile Include="SKI2017\WIC.cs" />
+    <Compile Include="SKI2017\KOL.cs" />
+    <Compile Include="SKI2018\GRA.cs" />
+    <Compile Include="SKI2018\SIL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="D:\C#\WIN32\ProcessLib\ProcessLib\ProcessLib\ProcessLib.csproj">
+    <ProjectReference Include="..\ProcessLib\ProcessLib.csproj">
       <Project>{e492e170-8e9d-40b5-8083-fc5b2622b8bc}</Project>
       <Name>ProcessLib</Name>
     </ProjectReference>
